update pom setting

--- a/src/javastudy/cglibDemo/pom.xml
+++ b/src/javastudy/cglibDemo/pom.xml
@@ -16,4 +16,36 @@
             <version>3.2.12</version>
         </dependency>
     </dependencies>
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>remote-repos</name>
+            <url>https://CAP5SGH:cjh1998CJH@rb-artifactory.bosch.com:443/artifactory/remote-repos</url>
+        </repository>
+        <repository>
+            <snapshots/>
+            <id>snapshots</id>
+            <name>libs-snapshot</name>
+            <url>https://CAP5SGH:cjh1998CJH@rb-artifactory.bosch.com:443/artifactory/libs-snapshot</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>mdm-plugins-release</name>
+            <url>https://CAP5SGH:cjh1998CJH@rb-artifactory.bosch.com:443/artifactory/mdm-plugins-release</url>
+        </pluginRepository>
+        <pluginRepository>
+            <snapshots/>
+            <id>snapshots</id>
+            <name>mdm-plugins-release</name>
+            <url>https://CAP5SGH:cjh1998CJH@rb-artifactory.bosch.com:443/artifactory/mdm-plugins-release</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
