--- a/src/javastudy/chat-demo/src/main/resources/application.properties
+++ b/src/javastudy/chat-demo/src/main/resources/application.properties
@@ -1,4 +1,16 @@
-server.port=4000
+server.port=6324
 netty.port=9090
 netty.host=127.0.0.1
-spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.cache=true
+spring.thymeleaf.prefix=classpath:/templates/
+management.endpoint.info.enabled=true
+management.endpoint.mappings.enabled=true
+management.endpoint.env.enabled=true
+management.endpoint.metrics.enabled=true
+management.endpoint.health.show-details=always
+info.app.encoding=UTF-8
+info.app.java.source=1.8
+info.app.java.target=1.8
+info.app.author=spencer cjh
+info.app.web=github.com/spencercjh
