--- a/src/javastudy/chat-demo/src/main/resources/log4j.properties
+++ b/src/javastudy/chat-demo/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 # error/warnings messages to the console. Hence, we have the stdout
 # appender.
 #log4j.rootLogger=DEBUG, stdout, service
-log4j.rootLogger= INFO, stdout, query
+log4j.rootLogger= DEBUG, stdout, query
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
