搞了一个reactive栈的chat demo

--- a/src/javastudy/chat-demo/src/main/resources/application.properties
+++ b/src/javastudy/chat-demo/src/main/resources/application.properties
@@ -4,10 +4,7 @@ netty.host=127.0.0.1
 spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=true
 spring.thymeleaf.prefix=classpath:/templates/
-management.endpoint.info.enabled=true
-management.endpoint.mappings.enabled=true
-management.endpoint.env.enabled=true
-management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 info.app.encoding=UTF-8
 info.app.java.source=1.8
