--- a/src/javastudy/reactive-chat-demo/src/main/resources/application.properties
+++ b/src/javastudy/reactive-chat-demo/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9000
+socket.port=9001
 server.address=127.0.0.1
 management.endpoints.web.exposure.include=*
 spring.thymeleaf.enabled=true
