完成jpa, h2的配置； 修复了Validator的bug。

--- a/src/javastudy/spring-kotlin-demo/src/main/resources/ValidationMessages.properties
+++ b/src/javastudy/spring-kotlin-demo/src/main/resources/ValidationMessages.properties
@@ -6,6 +6,6 @@ email.invalid="Please provide a valid email address"
 phone.required="Please enter a phone number"
 address.required="Please enter your address"
 city.required="Please enter a city"
-state.required="Please enter a state"
+province.required="Please enter a province"
 state.size="Please use 2 letter state code"
 zip.required="Enter a zip code"
