inject setting by @Value

--- a/kotlin/spring-kotlin-restful-demo/src/main/resources/application.yaml
+++ b/kotlin/spring-kotlin-restful-demo/src/main/resources/application.yaml
@@ -23,3 +23,10 @@ management:
       exposure:
         include:
           "*"
+default:
+  MOCK_STUDENT_AMOUNT:
+    30
+  DEFAULT_PAGE_SIZE:
+    15
+  DEFAULT_PAGE:
+    0
