update timezone from UTC to UTC+8(asia/shanghai)

--- a/kotlin/spring-kotlin-restful-demo/src/main/resources/application.yaml
+++ b/kotlin/spring-kotlin-restful-demo/src/main/resources/application.yaml
@@ -9,6 +9,8 @@ spring:
     platform: h2
     url: jdbc:h2:mem:test_db
     username: sa
+  jackson:
+    time-zone: Asia/Shanghai
 logging:
   level:
     root:
