--- a/kotlin/spring-kotlin-restful-demo/src/main/resources/application.yaml
+++ b/kotlin/spring-kotlin-restful-demo/src/main/resources/application.yaml
@@ -1,5 +1,3 @@
-server:
-
 spring:
   h2:
     console:
@@ -24,6 +22,13 @@ logging:
       info
     top.spencercjh.demo:
       debug
+  file:
+    name: logback.log
+    max-history: 15
+    max-size: 10MB
+    total-size-cap: 100MB
+    clean-history-on-start: true
+    path: ./logs
 management:
   endpoints:
     web:
